--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<form action="<?php bloginfo('template_url');?>/userinfo.php" method="post">
+<form action="userinfo.php" method="post">
 user name:<input type="text" name="username"><br>
 password:<input type="text" name="password"><br>
 <button>submit</button>
